--- a/.github/workflows/build-push-images-azure.yml
+++ b/.github/workflows/build-push-images-azure.yml
@@ -44,6 +44,7 @@ jobs:
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
       - run: |
+          sudo apt-get install -y git
           docker build ./src -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/wagtail:${{ github.ref_name }} -f ./src/Dockerfile.prod
           docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/wagtail:${{ github.ref_name }}
           docker build ./frontend -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/nextjs:${{ github.ref_name }} -f ./frontend/Dockerfile.prod
