--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -21,7 +21,9 @@ DB_PORT=5432
 
 #FRONTEND
 
-NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
+WAGTAIL_API_URL=http://localhost:8000/wt/api/nextjs
+NEXT_PUBLIC_WAGTAIL_API_URL=http://localhost:8000/wt/api/nextjs
+NEXT_PUBLIC_BASE_URL=http://localhost:8000/
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
