--- a/frontend/package.json
+++ b/frontend/package.json
@@ -67,6 +67,7 @@
         "@svgr/webpack": "^6.2.1",
         "@swc/core": "^1.2.196",
         "@swc/jest": "^0.2.21",
+        "@tailwindcss/line-clamp": "^0.4.2",
         "@tailwindcss/typography": "^0.5.7",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
