--- a/.github/workflows/build-push-images-azure.yml
+++ b/.github/workflows/build-push-images-azure.yml
@@ -36,7 +36,13 @@ jobs:
       # checkout the repo
       - name: "Checkout GitHub Action"
         uses: actions/checkout@main
-
+      - name: Set environment for branch
+        run: |
+        if [[ $GITHUB_REF == 'refs/heads/main' ]]; then
+            echo "NEXT_PUBLIC_WAGTAIL_API_URL=https://holon-v2-acceptatie.azurewebsites.net/wt/api/nextjs" >> "$GITHUB_ENV"
+        else
+            echo "NEXT_PUBLIC_WAGTAIL_API_URL=https://holontool.nl/wt/api/nextjs" >> "$GITHUB_ENV"
+        fi
       - name: "Build and push image"
         uses: azure/docker-login@v1
         with:
@@ -46,7 +52,7 @@ jobs:
       - run: |
           docker build ./src -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/wagtail:${{ github.ref_name }} -f ./src/Dockerfile.prod
           docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/wagtail:${{ github.ref_name }}
-          docker build ./frontend -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/nextjs:${{ github.ref_name }} -f ./frontend/Dockerfile.prod
+          docker build ./frontend --build-arg NEXT_PUBLIC_WAGTAIL_API_URL=$NEXT_PUBLIC_WAGTAIL_API_URL -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/nextjs:${{ github.ref_name }} -f ./frontend/Dockerfile.prod
           docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/nextjs:${{ github.ref_name }}
           docker build ./docker -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/nginx:${{ github.ref_name }}
           docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/nginx:${{ github.ref_name }}
