--- a/src/holon/services/.cloudclient/config/config.yml
+++ b/src/holon/services/.cloudclient/config/config.yml
@@ -1,3 +1,3 @@
 anylogic_cloud:
-  api_key: 7a3563c1-ea1c-41d6-8009-b7abfd93f7ba
-  url: https://engine.holontool.nl
+  api_key: c260c06d-6e31-4e5e-9d61-62c89b0bbf29
+  url: "https://cloud.anylogic.com"
