--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
         "next": "12.3.0",
         "prop-types": "^15.8.1",
         "react": "18.2.0",
+        "react-confetti": "^6.1.0",
         "react-cookie-consent": "^8.0.1",
         "react-dom": "18.2.0",
         "react-ga": "^3.3.1",
