--- a/src/holon/services/etm_costs.config.yml
+++ b/src/holon/services/etm_costs.config.yml
@@ -48,6 +48,24 @@ depreciation_costs_solar_farm_per_kw:
 #     data: value
 #     etm_key: depreciation_costs_buildings_air_source_heat_pump_per_kw
 
+depreciation_costs_households_air_source_heat_pump_per_kw:
+  value:
+    type: query
+    data: value
+    etm_key: depceciation_costs_households_air_source_heat_pump_per_kw
+
+depreciation_costs_households_air_source_hybrid_heat_pump_per_kw:
+  value:
+    type: query
+    data: value
+    etm_key: depceciation_costs_households_air_source_hybrid_heat_pump_per_kw
+
+depreciation_costs_households_gas_burner_per_kw:
+  value:
+    type: query
+    data: value
+    etm_key: depceciation_costs_households_gas_burner_per_kw
+
 depreciation_costs_buildings_gas_burner_per_kw:
   value:
     type: query
