--- a/.github/workflows/django-code-quality.yml
+++ b/.github/workflows/django-code-quality.yml
@@ -55,6 +55,7 @@ jobs:
         uses: psf/black@stable
         with:
           options: --check --line-length 100 --exclude "^.*\b(migrations)\b.*$"
+          version: "~= 22"
       - name: Run Tests
         run: |
           python manage.py test
